fix: changed scrollbar to white

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -267,5 +267,5 @@ div.react-terminal-active-input {
 
 .auto-scroll::-webkit-scrollbar-thumb {
    border-radius: 4px;
-   background-color: rgba(0,0,0,.5);
+   background-color: white;
 }
